# civiq6

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
civiq6/: __init__.py  camera.py  camera2.py  capture.py  capture2.py  devices.py  dynqt6.py  qt_compat.py  vimbarunner.py
civiq6/examples/videoprocess/: videoprocess.py
civiq6/examples/videostream/: videostream.py
doc/source/: conf.py  index.rst  install.rst  intro.rst
doc/source/examples/: camera-capture.rst  camera-feature.rst  camera-stream.rst  camera-switch.rst  index.rst  videoprocess.rst  videostream.rst
doc/source/examples/PyQt6/: camera_capture.py  camera_feature.py  camera_stream.py  camera_switch.py  imagecapture.py  videorecorder.py  videostream.py  videostream2.py
doc/source/examples/PySide6/: camera_capture.py  camera_feature.py  camera_stream.py  camera_switch.py  camerafeature.py  imagecapture.py  videoprocess.py  videorecorder.py  videostream.py  videostream2.py
doc/source/reference/: camera.rst  capture.rst  devices.rst  index.rst  vimbarunner.rst
doc/source/user-guide/: installation.rst  introduction.rst
requirements/: doc.txt  install.txt  test.txt
src/civiq6/: __init__.py  devices.py
