[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "civiq6"
description = "Package for integrating VimbaPython and Qt6"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["Qt", "GUI", "Camera", "Allied Vision", "Vimba"]
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Multimedia :: Graphics",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: User Interfaces",
]
dependencies = [
]
dynamic = [
    "version",
]

[project.urls]
repository = "https://github.com/JSS95/civiq6"

[project.optional-dependencies]
test = [
    "mypy",
    "imageio",
]
doc = [
    "numpydoc",
    "sphinx",
    "sphinx-tabs",
    "sphinx_rtd_theme",
    "imageio[ffmpeg]",
]
full = ["civiq6[test,doc]"]

[tool.setuptools.dynamic]
version = {attr = "civiq6.version.__version__"}
